[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Menu screen/menu.gd" type="Script" id=1]

[node name="Lobby" type="Node2D"]
script = ExtResource( 1 )

[node name="HostGame" type="Button" parent="."]
margin_left = 384.0
margin_top = 192.0
margin_right = 640.0
margin_bottom = 260.0
text = "Host Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinGame" type="Button" parent="."]
margin_left = 384.0
margin_top = 288.0
margin_right = 640.0
margin_bottom = 356.0
text = "Join Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputIP" type="LineEdit" parent="."]
margin_left = 384.0
margin_top = 376.0
margin_right = 640.0
margin_bottom = 408.0
placeholder_text = "Provide host IP"
placeholder_alpha = 0.2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HostGame" to="." method="_on_HostGame_pressed"]
[connection signal="pressed" from="JoinGame" to="." method="_on_JoinGame_pressed"]
